--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,69 +1,71 @@
 body {
-	margin: 3em auto;
-	padding: 0;
-	background-color: #eaebee;
-	font-family: Arial, Verdana, sans-serif;
-	font-size: 14px;
-	font-weight: normal;
-	color: #333;
-	line-height: 1.4em;
+    margin: 3em auto;
+    padding: 0;
+    background-color: #eaebee;
+    font-family: Arial, Verdana, sans-serif;
+    font-size: 14px;
+    font-weight: normal;
+    color: #333;
+    line-height: 1.4em;
 }
 
-a:link, a:visited {
-	color: #39f;
-	text-decoration: none;
+a:link,
+a:visited {
+    color: #39f;
+    text-decoration: none;
 }
 
 a:hover {
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
-h1, h2 {
-	color: #FFF;
-	font-size: 1.6em;
-	margin-bottom: 0;
-	padding: 1.5em;
-	padding-bottom: 1.2em;
-	background: #374252;
+h1,
+h2 {
+    color: #fff;
+    font-size: 1.6em;
+    margin-bottom: 0;
+    padding: 1.5em;
+    padding-bottom: 1.2em;
+    background: #374252;
 }
 
 h1::after {
-	display: block;
-	content: "";
-	background: url("../images/pixijs-v4-logo.png") no-repeat;
-	height: 33px;
-	width: 99px;
-	margin-top: -0.3em;
-	float: right;
+    display: block;
+    content: "";
+    background: url("../images/pixijs-v4-logo.png") no-repeat;
+    height: 33px;
+    width: 99px;
+    margin-top: -0.3em;
+    float: right;
 }
 
 h1 em {
-	font-weight: 200;
-	font-style: normal;
+    font-weight: 200;
+    font-style: normal;
 }
 
 h2 {
-	font-size: 1.3em;
-	padding: 1em;
-	padding-bottom: 0.8em;
+    font-size: 1.3em;
+    padding: 1em;
+    padding-bottom: 0.8em;
 }
 
 h3 {
-	background: #e0e1e5;
-	color: #374252;
-	font-size: 1.25em;
-	padding: 0.5em;
-	margin-top: 1.25em;
-	margin-bottom: -0.5em;
-	position: relative;
+    background: #e0e1e5;
+    color: #374252;
+    font-size: 1.25em;
+    padding: 0.5em;
+    margin-top: 1.25em;
+    margin-bottom: -0.5em;
+    position: relative;
 }
 
 code {
-	color: black;
-	background-color: rgba(255, 230, 0, 0.33);
-	padding: 1px 3px;
-	font-family: Courier New, Courier, serif;
-	font-weight: bold;
+    color: black;
+    background-color: rgba(255, 230, 0, 0.33);
+    padding: 1px 3px;
+    font-family: Courier New, Courier, serif;
+    font-weight: bold;
 }
 
 /**
